--- a/config.toml
+++ b/config.toml
@@ -17,16 +17,15 @@ enableRobotsTXT = true
 
   themeColor = "#ff1d55"
 
-  adsensePublisher = "ca-pub-123456789"
-  googleAnalytics = "UA-12345678-123"
-  appleItunesApp = "app-id=123456789, app-argument=app-name://link/to/app-content"
+  #adsensePublisher = "ca-pub-123456789"
+  #googleAnalytics = "UA-12345678-123"
+  #appleItunesApp = "app-id=123456789, app-argument=app-name://link/to/app-content"
   ampManifest = "/amp-manifest.json"
 
   alternatePageName = "MC Server"
   organizationLogo = "https://gohugo-amp.gohugohq.com/logo.png"
   organizationName = "gohugohq.com"
   organizationAddress = "Some Street 123, 12345 City"
-  socialProfiles = ["http://www.facebook.com/your-profile","http://instagram.com/yourProfile","http://www.linkedin.com/in/yourprofile","http://plus.google.com/your_profile"]
   publisherName = "gohugohq.com"
   publisherLogo = "https://gohugo-amp.gohugohq.com/logo-publisher.png" # https://developers.google.com/search/docs/data-types/articles#logo-guidelines
   publisherLogoWidth = 600
