--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://LINK-TO-YOUR-REPOSITORY"
+    "url": "git+https://github.com/mcserverhosting-net/sitev2"
   },
   "keywords": [
     "kw1",
@@ -33,7 +33,7 @@
     "kw3"
   ],
   "bugs": {
-    "url": "https://LINK-TO-YOUR-BUG-TRACKER"
+    "url": "https://github.com/mcserverhosting-net/sitev2"
   },
-  "homepage": "https://YOUR-HOMEPAGE.TLD"
+  "homepage": "https://mcserverhosting.net"
 }
