correct social links

--- a/data/footer.yaml
+++ b/data/footer.yaml
@@ -1,6 +1,6 @@
-facebook: "https://www.facebook.com/mcserverhosting"
-instagram: "https://www.instagram.com/mcsh"
-twitter: "https://www.twitter.com/mcsh-net"
+facebook: "https://www.facebook.com/mcshnet"
+instagram: "https://www.instagram.com/mcshnet"
+twitter: "https://www.twitter.com/mcsh_net"
 discord: "https://mcserverhosting.net/discord"
 
 columns:
