add google analytics

--- a/config.toml
+++ b/config.toml
@@ -19,7 +19,7 @@ enableRobotsTXT = true
   themeColor = "#ff1d55"
 
   #adsensePublisher = "ca-pub-123456789"
-  #googleAnalytics = "UA-12345678-123"
+  googleAnalytics = "UA-24240017-2"
   #appleItunesApp = "app-id=123456789, app-argument=app-name://link/to/app-content"
   ampManifest = "/amp-manifest.json"
 
